--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -20,4 +20,18 @@
   background-size: cover;
 }
 
+.avatar-bordered-large {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 50%;
+  box-shadow: 0 1px 5px rgba(0,0,0,0.3);
+  border: white 3px solid;
+  margin: 0 auto;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  background-color: white;
+
+}
+
 
