--- a/app/assets/stylesheets/components/_title.scss
+++ b/app/assets/stylesheets/components/_title.scss
@@ -14,6 +14,18 @@
   font-size: 25px;
 }
 
+.title h2 {
+  color: black;
+  font-weight: bold;
+  font-family: 'Cutive Mono', monospace;
+  font-size: 50px;
+  margin-top: 30px;
+}
+
+// .title {
+//   min-height: 100vh;
+// }
+
 // .container h1 {
 //   font-family: 'Shadows Into Light', cursive;
 //   font-weight: bold;
