--- a/app/views/creators/show.html.erb
+++ b/app/views/creators/show.html.erb
@@ -2,12 +2,12 @@
   <div class="text-center col-lg-8 offset-lg-2 col-md-6 col-sm-8 offset-sm-2">
     <%= cl_image_tag @creator.avatar, class:"avatar-bordered w-25 h-25" %>
     <h1><%= @creator.first_name %> <%= @creator.last_name %>, <%= @creator.age %></h2>
-    <h2>Location: <%= @creator.city %></h2>
+    <h4>Location: <%= @creator.city %></h4>
     <%= link_to "Edit Profile", edit_creator_path(@creator), class:"mb-3" %>
-    <h4>Description: </h4>
-    <p><%= @creator.description %></p>
-    <h4>Portfolio URL </h4>
-    <p><%= @creator.portfolio_url %></p>
+    <h2>Description: </h42>
+    <h4><%= @creator.description %></h4>
+    <h2>Portfolio URL </h2>
+    <h4><%= @creator.portfolio_url %></h4>
   </div>
 </div>
 <!-- New customized collabs -->
