My drawings for specific kid now links to drawings show

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -206,3 +206,10 @@ padding-top: 10px
   top: 0px;
 
 }
+
+.card-collab.upload a img {
+  height: 400px;
+  width: 100%;
+  object-fit: cover;
+  padding: 0px;
+}
