download possible need to confirm rendering

--- a/app/views/collaborations/show.html.erb
+++ b/app/views/collaborations/show.html.erb
@@ -17,4 +17,5 @@
 <div class="card-collab-infos text-center mb-3">
   <p> <strong><em>inspired by</em></strong> <%= link_to @collaboration.drawing.kid.first_name, kid_path(@collaboration.drawing.kid), class:"text-primary ml-3" %></p>
   <p><strong><em>brought to life by</em></strong> <%= link_to @collaboration.creator.first_name, creator_path(@collaboration.creator), class:"text-primary ml-3" %></p>
+  <%= render 'collaborations/download_collab' %>
 </div>
