--- a/app/views/drawings/_download.html.erb
+++ b/app/views/drawings/_download.html.erb
@@ -1,1 +1,1 @@
-<%= link_to "click here to download", collaboration_download_path(@collaboration.creator, @collaboration) %>
+<%= link_to "download your drawing", drawing_download_path(@drawing) %>
