--- a/app/views/drawings/show.html.erb
+++ b/app/views/drawings/show.html.erb
@@ -21,4 +21,5 @@
         <%= c.submit "Choose #{@drawing.kid.first_name}'s Drawing!", class:"button-register my-3" %>
       <% end %>
     <% end %>
+    <%= render 'drawings/download' %>
   </div>
