--- a/app/views/drawings/_form.html.erb
+++ b/app/views/drawings/_form.html.erb
@@ -1,7 +1,7 @@
 <div class="container-drawing col-8 offset-2 my-3 p-3">
   <h1>Upload your new awesome drawing!</h1>
   <%= simple_form_for [@drawing.kid, @drawing],  html: {novalidate: false} do |d| %>
-    <%= d.input :name, label: "Title" %>
+    <%= d.input :name, label: "Title of your drawing" %>
     <%= d.input :image, :required => true %>
     <%= d.input :image_cache, as: :hidden %>
     <%= d.submit "Upload Now!", class:"btn btn-primary my-3" %>
