fixed the logic on the drawings show page to show the right profile according to loggedin user

--- a/app/views/drawings/show.html.erb
+++ b/app/views/drawings/show.html.erb
@@ -8,12 +8,10 @@
     <p><%= cl_image_tag @drawing.image %></p>
   </div>
   <div class="container-edit text-center">
+    <% if current_user.type == "Creator" %>
     <h2>About the Dreamer</h2>
     <%= cl_image_tag @drawing.kid.avatar, class:"avatar-bordered-large" %>
-    <% if current_user.type == "Creator" %>
-      <a>
-        <h3><%=link_to "#{@drawing.kid.first_name}, #{@drawing.kid.age}", kid_path(@drawing.kid)%></h3>
-      </a>
+      <a><h3><%=link_to "#{@drawing.kid.first_name}, #{@drawing.kid.age}", kid_path(@drawing.kid)%></h3></a>
       <div class="card-text">
         <%= simple_form_for [@collaboration.creator, @collaboration] do |c| %>
           <%= c.input :creator_id, as: :hidden, input_html: { value: current_user.id } %>
@@ -24,7 +22,7 @@
     <% elsif (current_user.type == "Kid") && (@drawing.collaboration.creator == nil) %>
       <h3> NOT YET BOOKED </h3>
     <% elsif (current_user.type == "Kid") && (@drawing.booked?) %>
-      <h1>About the Creator</h1>
+      <h2>About the Creator</h2>
       <%= cl_image_tag @drawing.collaboration.creator.avatar, class:"avatar-bordered-large" %>
       <a>
         <h3><%=link_to "#{@drawing.collaboration.creator.first_name}", creator_path(@collaboration.creator)%></h3>
