--- a/app/views/collaborations/_download_collab.html.erb
+++ b/app/views/collaborations/_download_collab.html.erb
@@ -1,1 +1,1 @@
-<%= link_to "download your collaboration", collaboration_download_path(@collaboration) %>
+<%= link_to collaboration_download_path(@collaboration) do %> <i class="fas fa-cloud-download-alt"></i> <% end %>
