--- a/app/views/drawings/_download.html.erb
+++ b/app/views/drawings/_download.html.erb
@@ -1,1 +1,1 @@
-<%= link_to "download your drawing", drawing_download_path(@drawing) %>
+<%= link_to drawing_download_path(@drawing) do %> <i class="fas fa-cloud-download-alt"></i>  <% end %>
