--- a/app/views/collaborations/_kid_collab.html.erb
+++ b/app/views/collaborations/_kid_collab.html.erb
@@ -48,7 +48,9 @@
             <p><strong><em>brought to life by</em></strong> <%= collab.creator.first_name %></p>
             <%= link_to collaboration_upvote_path(collab) do %> <i class="far fa-heart"></i>  <%= "#{collab.votes_for.size}" %><% end %>
           </div>
-          <%= link_to "View Full Collab", creator_collaboration_path(collab.creator, collab), class:"btn-view-more" %>
+          <div class="text-center mb-3">
+          <%= link_to "View Full Collab", creator_collaboration_path(collab.creator, collab), class:"btn-view-more text" %>
+        </div>
         </div>
       </div>
     <% end %>
