--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -5,7 +5,9 @@
   background: #fbfbfb;
   box-shadow: 0 0 25px rgba(0,0,0,0.4);
   margin: 30px auto;
-  width: 450px;
+  width: auto;
+  max-width: 450px;
+  height: auto;
   padding: 15px;
   }
 
@@ -129,9 +131,9 @@
 
 .drawing-image img, .finished-collab-image img {
   height: auto;
-  max-height: 650px;
+  max-height: 100%;
   width: auto;
-  max-width: 1000px;
+  max-width: 100%;
   object-fit: cover;
   margin-left: 20px;
   margin-right: 20px;
@@ -139,24 +141,27 @@
   box-shadow: 1px 1px 25px;
 }
 
-
-
-
 // Unfinished upload cards format buttons and card
 
 .card-collab.upload > img {
-  height: 400px;
+  // height: 400px;
+  max-height: 400px;
+  height: auto;
   width: 100%;
   object-fit: cover;
   padding: 0px;
 }
 
 .card-collab-infos-upload {
+  height: auto;
+  max-height: 100%;
+  width: auto;
+  max-width: 100%;
   padding: 15px;
   margin: 0px;
-  padding: 16px;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .card-collab-infos-upload p {
