created new avatar sizing for profile pages

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -35,6 +35,13 @@
   position: relative;
 }
 
+// @media(max-width: 576px) {
+//   #home-carousel {
+//     width: 100vw;
+//     height: 40px;
+//   }
+// }
+
 // DreamCoLab Intro
 .card-join-community {
   align-items: center;
