--- a/app/views/creators/show.html.erb
+++ b/app/views/creators/show.html.erb
@@ -1,6 +1,6 @@
 <div class='container-profile-creator'>
   <div class="text-center col-lg-8 offset-lg-2 col-md-6 col-sm-8 offset-sm-2">
-    <%= cl_image_tag @creator.avatar, class:"avatar-bordered w-25 h-25" %>
+    <%= cl_image_tag @creator.avatar, class:"avatar-bordered-xl" %>
     <h1><%= @creator.first_name %> <%= @creator.last_name %>, <%= @creator.age %></h2>
     <h4>Location: <%= @creator.city %></h4>
     <%= link_to "Edit Profile", edit_creator_path(@creator), class:"mb-3" %>
@@ -33,11 +33,11 @@
             <%= link_to collaboration_upvote_path(collab) do %> <i class="far fa-heart"></i>  <%= "#{collab.votes_for.size}" %>
             <% end %>
           </div class="text-center">
-            <%= link_to "View Full Collab", creator_collaboration_path(collab.creator, collab), class:"btn-view-more" %>
-          </div>
-          </div>
+          <%= link_to "View Full Collab", creator_collaboration_path(collab.creator, collab), class:"btn-view-more" %>
         </div>
       </div>
-    <% end %>
+    </div>
   </div>
+<% end %>
+</div>
 </div>
