--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,3 +1,4 @@
+// small avatars throughout navbars and such
 .avatar-bordered {
   width: 40px;
   height: 40px;
@@ -20,6 +21,7 @@
   background-size: cover;
 }
 
+// drawings show pages about the artist
 .avatar-bordered-large {
   width: 150px;
   height: 150px;
@@ -31,7 +33,20 @@
   margin-top: 40px;
   margin-bottom: 40px;
   background-color: white;
+}
 
+// creator and kids profiles
+.avatar-bordered-xl {
+  width: 230px;
+  height: 230px;
+  object-fit: cover;
+  border-radius: 50%;
+  box-shadow: 0 1px 10px rgba(0,0,0,0.3);
+  border: white 3px solid;
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  background-color: white;
 }
 
 
