--- a/app/views/collaborations/show.html.erb
+++ b/app/views/collaborations/show.html.erb
@@ -7,10 +7,10 @@
 </div>
 <!-- Image with Flip -->
 <div class="together-card lg-col-8 col-sm-8 offset-sm-2 my-3 p-3">
-  <div class="drawing-image">
+  <div class="drawing-image text-center">
     <p><%= cl_image_tag @collaboration.drawing.image %></p>
   </div>
-  <div class="finished-collab-image">
+  <div class="finished-collab-image text-center">
     <p><%= cl_image_tag @collaboration.collab_upload %></p>
   </div>
 </div>
