--- a/app/views/drawings/show.html.erb
+++ b/app/views/drawings/show.html.erb
@@ -1,11 +1,10 @@
-F
 <div class="title text-center col-sm-8 offset-sm-2 my-3 p-3">
   <!-- <div class="my-3 w-70%"> -->
   <h2><strong>Title: "<%= @drawing.name %>"</strong></h2>
 </div>
 <!-- </div> -->
 <div class="drawing-show-all">
-  <div class="drawing-image">
+  <div class="drawing-image text-center">
     <p><%= cl_image_tag @drawing.image %></p>
   </div>
   <div class="container-edit text-center">
