added colummn to schema for admin

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
 <!-- Banner Top -->
+<!-- Carousel -->
 <%= render 'homepage_carousel' %>
 <!-- DreamCoLab Register new user -->
 <div class="card-join-community text-center col-sm-8 offset-sm-2">
