added admin column to schema

--- a/app/views/collaborations/_creator_collab.html.erb
+++ b/app/views/collaborations/_creator_collab.html.erb
@@ -1,4 +1,4 @@
-<!-- Index for ALL COLLABS FOR SPECIFIC CREATOR -->
+<!-- Index for COLLABS FOR SPECIFIC CREATOR -->
 <div class="full-height-page">
   <div class="title text-center mb-3">
     <h1>My Collaborations Gallery</h1>
