--- a/app/views/creators/show.html.erb
+++ b/app/views/creators/show.html.erb
@@ -2,12 +2,18 @@
   <div class="text-center col-lg-8 offset-lg-2 col-md-6 col-sm-8 offset-sm-2">
     <%= cl_image_tag @creator.avatar, class:"avatar-bordered-xl" %>
     <h1><%= @creator.first_name %> <%= @creator.last_name %>, <%= @creator.age %></h2>
-    <h4>Location: <%= @creator.city %></h4>
+    <% if @creator.city.present? %>
+      <h4>Location: <%= @creator.city %></h4>
+    <% end %>
     <%= link_to "Edit Profile", edit_creator_path(@creator), class:"mb-3" %>
-    <h2>Description: </h42>
-    <h4><%= @creator.description %></h4>
-    <h2>Portfolio URL </h2>
-    <h4><%= @creator.portfolio_url %></h4>
+    <% if @creator.description.present? %>
+      <h2>Description: </h2>
+      <h4><%= @creator.description %></h4>
+    <% end %>
+    <% if @creator.portfolio_url.present? %>
+      <h2>Portfolio URL </h2>
+      <h4><%= @creator.portfolio_url %></h4>
+    <% end %>
   </div>
 </div>
 <!-- New customized collabs -->
