full creators index page and linking done and commented out My Messages for now, moved my collabs to the dropdown list instead

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,7 @@
           <%= link_to "Drawings |", drawings_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "My Collaborations |", collaborations_path, class: "nav-link" %>
+          <%= link_to "Creators |", creators_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "Dream Gallery", dream_gallery_path, class: "nav-link" %>
@@ -25,7 +25,8 @@
             <% else %>
               <%= link_to "My profile", creator_path(current_user), class: "dropdown-item" %>
             <% end %>
-            <%= link_to "My Messages", "#", class: "dropdown-item" %>
+            <%= link_to "My Collaborations", collaborations_path, class: "dropdown-item" %>
+            <%#= link_to "My Messages", "#", class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
