--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,2 +1,119 @@
 // Import page-specific CSS files here.
 @import "home";
+
+// creators index
+.index-all {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 30px;
+
+}
+
+.our-creators {
+  width: 380px;
+  padding: 30px 0 40px;
+  margin-bottom: 30px;
+  background-color: #fbfbfb;
+  text-align: center;
+  overflow: hidden;
+  position: relative;
+  box-shadow: 1px 1px 10px;
+}
+
+.our-creators .picture {
+  display: inline-block;
+  height: 130px;
+  width: 130px;
+  margin-bottom: 50px;
+  z-index: 1;
+  position: relative;
+}
+
+.our-creators .picture::before {
+  content: "";
+  width: 100%;
+  height: 0;
+  border-radius: 50%;
+  background-color: #b9e1dc;
+  position: absolute;
+  bottom: 135%;
+  right: 0;
+  left: 0;
+  opacity: 0.9;
+  transform: scale(3);
+  transition: all 0.3s linear 0s;
+}
+
+.our-creators:hover .picture::before {
+  height: 100%;
+}
+
+.our-creators .picture::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #756c83;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.our-creators .picture img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+  transform: scale(1);
+  transition: all 0.9s ease 0s;
+}
+
+.our-creators:hover .picture img {
+  box-shadow: 0 0 0 14px #f7f5ec;
+  transform: scale(0.7);
+}
+
+.our-creators .city {
+  display: block;
+  font-size: 15px;
+  color: #4e5052;
+  text-transform: capitalize;
+}
+
+.our-creators .view-full-profile {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  background-color: #756c83;
+  position: absolute;
+  bottom: -100px;
+  left: 0;
+  transition: all 0.5s ease 0s;
+}
+
+.our-creators:hover .view-full-profile {
+  bottom: 0;
+  color: white;
+}
+
+.creator-content .name {
+  font-family: 'Shadows Into Light', cursive;
+  font-weight: bold;
+  color: #f38181;
+}
+
+.creator-content .city {
+  font-family: 'Cutive Mono', monospace;
+  font-size: 25px;
+  color: black;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+}
+
+.view-full-profile a {
+  font-family: 'Cutive Mono', monospace;
+  color: #b9e1dc;
+  font-weight: bold;
+}
+
