--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -4,14 +4,15 @@
 // creators index
 .index-all {
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
-  margin: 30px;
+  justify-content: center;
 
 }
 
 .our-creators {
   width: 380px;
+  max-width: 90vw;
+  align-items: center;
   padding: 30px 0 40px;
   margin-bottom: 30px;
   background-color: #fbfbfb;
