--- a/app/views/creators/index.html.erb
+++ b/app/views/creators/index.html.erb
@@ -4,7 +4,7 @@
 <!-- cards to show all creators -->
 <div class="index-all">
   <% @creators.each do |c| %>
-    <div class="row flex-wrap">
+    <div class="row flex-wrap mx-0">
       <div class="col-sm-10 col-md-6 col-lg-4">
         <div class="our-creators">
           <div class="picture">
