--- a/app/views/creators/edit.html.erb
+++ b/app/views/creators/edit.html.erb
@@ -2,7 +2,7 @@
   <h3>Please share a bit about yourself!</h3>
   <div class='row'>
     <div class='edit-kid-card text-center col-sm-8 col-lg-4 offset-lg-4 offset-sm-2 my-3 p-3'>
-      <%= simple_form_for @creator do |f| %>
+      <%= simple_form_for current_user do |f| %>
         <%= f.input :first_name, placeholder: "Insert first name" %>
         <%= f.input :last_name, placeholder: "Insert last name" %>
         <%= f.input :age, placeholder: "How old are you?" %>
