--- a/app/assets/stylesheets/components/_title.scss
+++ b/app/assets/stylesheets/components/_title.scss
@@ -22,9 +22,14 @@
   margin-top: 30px;
 }
 
-// .title {
-//   min-height: 100vh;
-// }
+// edit account buttons
+.title a {
+font-family: 'Cutive Mono', monospace;
+color: black;
+background-color: white;
+border: 1px solid #50C878;
+}
+
 
 // .container h1 {
 //   font-family: 'Shadows Into Light', cursive;
