--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -21,12 +21,13 @@
           <%= cl_image_tag current_user.avatar, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <% if current_user.type == "Kid" %>
-              <%= link_to "My profile", kid_path(current_user), class: "dropdown-item" %>
+              <%= link_to "My Profile", kid_path(current_user), class: "dropdown-item" %>
             <% else %>
-              <%= link_to "My profile", creator_path(current_user), class: "dropdown-item" %>
+              <%= link_to "My Profile", creator_path(current_user), class: "dropdown-item" %>
             <% end %>
             <%= link_to "My Collaborations", collaborations_path, class: "dropdown-item" %>
             <%#= link_to "My Messages", "#", class: "dropdown-item" %>
+            <%= link_to "My Account", edit_user_registration_path, class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
