--- a/app/views/user_mailer/booked.html.erb
+++ b/app/views/user_mailer/booked.html.erb
@@ -1,6 +1,5 @@
-<!-- <p>Hi <%= @user.first_name %>,</p>
+<p>Hi <%= @user.first_name %>,</p>
 <p> Your drawing has just been booked by an artist! </p>
 <p> You'll hear from us again when the collaboration is ready. </p>
 <p>With love,</p>
 <p>Team DreamCoLab</p>
-<%= image_tag  %> -->
