--- a/app/views/user_mailer/booked.text.erb
+++ b/app/views/user_mailer/booked.text.erb
@@ -1,6 +1,6 @@
-<!-- Hi <%= @user.first_name %>,
+Hi <%= @user.first_name %>,
 Your drawing has just been booked by an artist!
 You will hear from us again as soon as the collaboration is ready.
 With love,
-Team DreamCoLab -->
+Team DreamCoLab
 
