--- a/app/views/user_mailer/completed.html.erb
+++ b/app/views/user_mailer/completed.html.erb
@@ -1,6 +1,5 @@
-<!-- <p>Hi <%= @user.first_name %>,</p>
+<p>Hi <%= @user.first_name %>,</p>
 <p>Your artist has just uploaded the finished collaboration. </p>
 <p>Please login to your DreamCoLab account to discover it.</p>
 <p>With love,</p>
 <p>Team DreamCoLab</p>
-<%= image_tag  %> -->
