post MVC and CRUD v2

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,5 +1,6 @@
   <%= simple_form_for @post do |d| %>
     <%= d.input :title, label: "Title post" %>
+    <%= d.input :summary, label: "One sentence summary" %>
     <%= d.input :main_image_upload, :required => true %>
     <%= d.input :main_image_upload_cache, as: :hidden %>
     <%= d.input :content, placeholder: "content of the article goes here" %>
