--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,7 +11,7 @@
     <h4><em><%= post.title %></em></h4>
   <% end %>
   <%= cl_image_tag post.main_image_upload  %>
-  <p><%= post.content %></p>
+  <p><%= post.summary %></p>
 <% end %>
 
 
