--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,5 @@
 <h4><em><%= @post.title %></em></h4>
+<h3><%= @post.summary %></h3>
   <%= cl_image_tag @post.main_image_upload  %>
   <p><%= @post.content %></p>
 
