post MVC and CRUD v3 with navbar

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <div class="title text-center">
-  <h1> FEED OF ALL RECENT ACTIVITIES</h1>
+  <h1> WHAT WE'VE BEEN UP TO....</h1>
 </div>
 
 <% if current_user.admin %>
